--- a/css/main.css
+++ b/css/main.css
@@ -106,13 +106,15 @@ textarea { border-color: #bfbfbf !important; }
 
 .page.page-id-87 li b { font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; color: #a30723; font-weight: normal; }
 
-.page.page-id-87 .dmbs-content form { padding: 10px; border: 1px dashed #6d6e70; }
+.page.page-id-87 .dmbs-content form { padding: 10px; border: 1px solid #6d6e70; }
 
 .page.page-id-87 .dmbs-content form input[type='submit'] { background-color: #fff; border: 0; color: #a30723; text-transform: uppercase; font-size: 14px; margin-left: 10px; }
 
 .page.page-id-87 .gform_footer { margin-top: 0; padding-top: 0; }
 
 .page.page-id-87 .address { margin-left: 20px; }
+
+.page.page-id-87 .gform_title { font-family: "Helvetica LT Std Light", Helvetica, Arial, sans-serif; text-transform: uppercase; margin-left: 15px; font-size: 18px; }
 
 .page-press .dmbs-main h3 { text-transform: uppercase; font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; color: #6d6e70; margin-bottom: 5px; }
 
@@ -176,7 +178,7 @@ textarea { border-color: #bfbfbf !important; }
 
 .page-exhibitions .row-bottom .opportunities .opportunities-title { font-size: 30px; margin-bottom: 5px; text-transform: uppercase; font-family: "LTC Twentieth Century Medium", Helvetica, Arial, sans-serif; }
 
-.navbar-nav > li > a { color: #6d6e70; text-transform: uppercase; font-size: 12px; padding: 10px 12px; letter-spacing: .0255em; }
+.navbar-nav > li > a { color: #6d6e70; text-transform: uppercase; font-size: 12px; padding: 10px 11px; letter-spacing: .0255em; }
 
 .navbar-nav > li > a:hover { background-color: transparent; }
 
