--- a/sass/partials/pages/_participate.scss
+++ b/sass/partials/pages/_participate.scss
@@ -1,8 +1,11 @@
-.page.page-id-87 {
+.page-participate {
   h4 {
-    font-weight: bold;
     font-size: 14px;
+    font-family: $helvetica-bold;
+    margin-bottom: 3px;
+    margin-top: 10px;
     color: $maroon;
+    font-weight: normal;
   }
 
   .second-column h4 {
