participate page template

--- a/sass/partials/_typography.scss
+++ b/sass/partials/_typography.scss
@@ -70,6 +70,7 @@ p {
 
 .image-caption {
   margin-top: 5px;
+
   p {
     font-size: 10px;
     line-height: 12px;
@@ -88,4 +89,19 @@ p {
 
 a {
   color: $maroon;
+}
+
+.gform_wrapper h3.gform_title {
+  font-weight: normal !important;
+}
+
+.gform_wrapper label.gfield_label {
+  font-weight: normal !important;
+  margin-bottom: 0px !important;
+  font-size: 12px !important;
+  font-size: inherit;
+}
+
+body .gform_wrapper .top_label div.ginput_container {
+  margin-top: 0 !important;
 }
