--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,12 @@ p { font-family: "Helvetica LT Std Roman", Helvetica, Arial, sans-serif; font-si
 
 a { color: #a30723; }
 
+.gform_wrapper h3.gform_title { font-weight: normal !important; }
+
+.gform_wrapper label.gfield_label { font-weight: normal !important; margin-bottom: 0px !important; font-size: 12px !important; font-size: inherit; }
+
+body .gform_wrapper .top_label div.ginput_container { margin-top: 0 !important; }
+
 body { background-color: #e2e2e2; }
 
 body > .container { background-color: #fff; }
@@ -96,9 +102,11 @@ textarea { border-color: #bfbfbf !important; }
 
 .trustees .trustee-pdf-downloads ul li a { color: #fff; text-transform: uppercase; font-size: 9px; background-color: #6d6e70; padding: 6px 6px 4px; border-radius: 6px; }
 
-.page-participate h4 { font-size: 14px; font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; margin-bottom: 3px; margin-top: 10px; color: #a30723; font-weight: normal; }
+.page-participate h4 { font-size: 14px; line-height: 1.4; font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; margin-bottom: 3px; margin-top: 10px; color: #a30723; font-weight: normal; }
 
-.page-participate .second-column h4 { margin-top: 0; }
+.page-participate .middle-column h4 { margin-top: 0; }
+
+.page-participate .left-column img { margin-top: 60px; }
 
 .page-participate ul { padding-left: 1em; }
 
@@ -106,15 +114,17 @@ textarea { border-color: #bfbfbf !important; }
 
 .page-participate li b { font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; color: #a30723; font-weight: normal; }
 
-.page-participate .dmbs-content form { padding: 10px; border: 1px solid #6d6e70; }
+.page-participate .gravity-form form { padding: 20px; border: 1px solid #6d6e70; }
 
-.page-participate .dmbs-content form input[type='submit'] { background-color: #fff; border: 0; color: #a30723; text-transform: uppercase; font-size: 14px; margin-left: 10px; }
+.page-participate .gravity-form form input[type='submit'] { background-color: #fff; border: 0; color: #a30723; text-transform: uppercase; font-size: 14px; margin-left: 10px; }
 
 .page-participate .gform_footer { margin-top: 0; padding-top: 0; }
 
 .page-participate .address { margin-left: 20px; }
 
-.page-participate .gform_title { font-family: "Helvetica LT Std Light", Helvetica, Arial, sans-serif; text-transform: uppercase; margin-left: 15px; font-size: 18px; }
+.page-participate .gform_title { font-family: "Helvetica LT Std Light", Helvetica, Arial, sans-serif; text-transform: uppercase; font-size: 18px; font-weight: normal; }
+
+.page-participate blockquote { border-left: 0; padding-top: 0; }
 
 .page-press .dmbs-main h3 { text-transform: uppercase; font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; color: #6d6e70; margin-bottom: 5px; }
 
