--- a/sass/partials/pages/_participate.scss
+++ b/sass/partials/pages/_participate.scss
@@ -1,6 +1,7 @@
 .page-participate {
   h4 {
     font-size: 14px;
+    line-height: 1.4;
     font-family: $helvetica-bold;
     margin-bottom: 3px;
     margin-top: 10px;
@@ -8,8 +9,11 @@
     font-weight: normal;
   }
 
-  .second-column h4 {
+  .middle-column h4 {
     margin-top: 0;
+  }
+  .left-column img {
+    margin-top: 60px;
   }
 
   ul {
@@ -26,9 +30,9 @@
     }
   }
 
-  .dmbs-content {
+  .gravity-form {
     form {
-      padding: 10px;
+      padding: 20px;
       border: 1px solid $gray;
 
       input[type='submit'] {
@@ -53,7 +57,11 @@
   .gform_title {
     font-family: $helvetica-light;
     text-transform: uppercase;
-    margin-left: 15px;
     font-size: 18px;
+    font-weight: normal;
+  }
+  blockquote {
+    border-left: 0;
+    padding-top: 0;
   }
 }
