update history template

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @import 'partials/pages/press';
 @import 'partials/pages/welcome';
 @import 'partials/pages/exhibitions';
+@import 'partials/pages/history';
 
 @import 'partials/header';
 @import 'partials/footer';
