--- a/css/main.css
+++ b/css/main.css
@@ -34,9 +34,7 @@ h3 { font-family: "Helvetica LT Std Roman", Helvetica, Arial, sans-serif; font-s
 
 p { font-family: "Helvetica LT Std Roman", Helvetica, Arial, sans-serif; font-size: 14px; line-height: 1.25; }
 
-.image-caption { margin-top: 5px; }
-
-.image-caption p { font-size: 10px; line-height: 12px; margin-bottom: 0; margin-right: 20px; }
+.image-caption { margin-top: 10px; font-size: 10px; line-height: 1.2; margin-bottom: 0; margin-right: 20px; }
 
 .photo-credit { font-family: "Helvetica LT Std Light", Helvetica, Arial, sans-serif; font-size: 9px; margin-bottom: 10px; margin-top: 5px; text-align: right; }
 
@@ -187,6 +185,8 @@ textarea { border-color: #bfbfbf !important; }
 .page-exhibitions .row-bottom .opportunities { font-size: 17px; line-height: 24px; border-left: 6px double #6d6e70; padding-left: 10px; }
 
 .page-exhibitions .row-bottom .opportunities .opportunities-title { font-size: 30px; margin-bottom: 5px; text-transform: uppercase; font-family: "LTC Twentieth Century Medium", Helvetica, Arial, sans-serif; }
+
+.page-history .image-space-top { margin-top: 35px; }
 
 .navbar-nav > li > a { color: #6d6e70; text-transform: uppercase; font-size: 12px; padding: 10px 11px; letter-spacing: .0255em; }
 
