--- a/sass/partials/_typography.scss
+++ b/sass/partials/_typography.scss
@@ -69,14 +69,11 @@ p {
 }
 
 .image-caption {
-  margin-top: 5px;
-
-  p {
-    font-size: 10px;
-    line-height: 12px;
-    margin-bottom: 0;
-    margin-right: 20px;
-  }
+  margin-top: 10px;
+  font-size: 10px;
+  line-height: 1.2;
+  margin-bottom: 0;
+  margin-right: 20px;
 }
 
 .photo-credit {
