--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 @import 'partials/pages/welcome';
 @import 'partials/pages/exhibitions';
 @import 'partials/pages/history';
+@import 'partials/pages/home';
 
 @import 'partials/header';
 @import 'partials/footer';
