--- a/css/main.css
+++ b/css/main.css
@@ -100,7 +100,7 @@ textarea { border-color: #bfbfbf !important; }
 
 .trustees .trustee-pdf-downloads ul li a { color: #fff; text-transform: uppercase; font-size: 9px; background-color: #6d6e70; padding: 6px 6px 4px; border-radius: 6px; }
 
-.page-participate h4 { font-size: 14px; line-height: 1.4; font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; margin-bottom: 3px; margin-top: 10px; color: #a30723; font-weight: normal; }
+.page-participate h4 { font-size: 14px; line-height: 1.4; font-family: "Helvetica LT Std Roman", Helvetica, Arial, sans-serif; margin-bottom: 3px; margin-top: 10px; color: #a30723; font-weight: normal; }
 
 .page-participate .middle-column h4 { margin-top: 0; }
 
@@ -110,11 +110,11 @@ textarea { border-color: #bfbfbf !important; }
 
 .page-participate li { margin-bottom: 10px; }
 
-.page-participate li b { font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; color: #a30723; font-weight: normal; }
+.page-participate li b { font-family: "Helvetica LT Std Roman", Helvetica, Arial, sans-serif; color: #a30723; font-weight: normal; }
 
 .page-participate .gravity-form form { padding: 20px; border: 1px solid #6d6e70; }
 
-.page-participate .gravity-form form input[type='submit'] { background-color: #fff; border: 0; color: #a30723; text-transform: uppercase; font-size: 14px; margin-left: 10px; }
+.page-participate .gravity-form form input[type='submit'] { background-color: #fff; border: 0; color: #a30723; text-transform: uppercase; font-size: 14px; margin-left: 0; padding: 0; }
 
 .page-participate .gform_footer { margin-top: 0; padding-top: 0; }
 
