--- a/sass/partials/pages/_participate.scss
+++ b/sass/partials/pages/_participate.scss
@@ -2,7 +2,7 @@
   h4 {
     font-size: 14px;
     line-height: 1.4;
-    font-family: $helvetica-bold;
+    font-family: $helvetica;
     margin-bottom: 3px;
     margin-top: 10px;
     color: $maroon;
@@ -24,7 +24,7 @@
     margin-bottom: 10px;
 
     b {
-      font-family: $helvetica-bold;
+      font-family: $helvetica;
       color: $maroon;
       font-weight: normal;
     }
@@ -41,7 +41,8 @@
         color: $maroon;
         text-transform: uppercase;
         font-size: 14px;
-        margin-left: 10px;
+        margin-left: 0;
+        padding: 0;
       }
     }
   }
