--- a/sass/partials/pages/_home.scss
+++ b/sass/partials/pages/_home.scss
@@ -95,6 +95,7 @@
   .waa-study {
     display: flex;
     margin-top: 30px;
+    margin-bottom: 20px;
     flex-direction: column;
     align-items: center;
 
@@ -111,6 +112,7 @@
         font-size: 22px;
         font-family: $georgia;
         padding: 5px;
+        letter-spacing: .2em;
       }
 
       .box-content {
@@ -153,6 +155,7 @@
       display: flex;
       align-items: stretch;
       font-family: $helvetica;
+      height: 185px;
 
       .si-left {
         padding: 8px;
