--- a/sass/partials/pages/_exhibitions.scss
+++ b/sass/partials/pages/_exhibitions.scss
@@ -19,7 +19,7 @@
         color: #fff;
         font-family: $helvetica-bold;
         font-size: 32px;
-
+        line-height: 1;
         a {
           color: #fff;
 
