--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -6,15 +6,18 @@
       font-size: 12px;
       padding: 10px 11px;
       letter-spacing: .0255em;
+
       &:hover {
         background-color: transparent;
       }
     }
+
     &.current-menu-item {
       a {
         color: $maroon;
       }
     }
+
     &.menu-item-has-children {
       .caret {
         display: none;
@@ -64,11 +67,24 @@
   padding: 15px 0;
   display: flex;
   justify-content: space-between;
+  @include for-phone-only {
+    flex-direction: column;
+  }
+
   .header-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     width: 122px;
+    @include for-phone-only {
+      flex-direction: row;
+      width: 100%;
+    }
+
     form {
       margin-bottom: 7px;
     }
+
     label {
       font-size: 9px;
       font-weight: normal;
@@ -82,6 +98,7 @@
   list-style: none;
   margin: 0;
   padding: 0;
+
   li {
     display: inline-block;
   }
