--- a/css/main.css
+++ b/css/main.css
@@ -298,6 +298,8 @@ textarea { border-color: #bfbfbf !important; }
 
 .page-home .waa-study .study-item a { text-transform: uppercase; }
 
+@media (max-width: 599px) { .navbar-nav { margin-left: 15px; } }
+
 .navbar-nav > li > a { color: #6d6e70; text-transform: uppercase; font-size: 12px; padding: 10px 11px; letter-spacing: .0255em; }
 
 .navbar-nav > li > a:hover { background-color: transparent; }
@@ -307,6 +309,8 @@ textarea { border-color: #bfbfbf !important; }
 .navbar-nav > li.menu-item-has-children .caret { display: none; }
 
 .navbar-nav > li:first-child a { padding-left: 0; }
+
+@media (max-width: 599px) { .navbar-nav > li:first-child a { padding-left: 10px; } }
 
 .navbar-nav > li:last-child a { padding-right: 0; }
 
@@ -331,6 +335,10 @@ textarea { border-color: #bfbfbf !important; }
 .social-links { list-style: none; margin: 0; padding: 0; }
 
 .social-links li { display: inline-block; }
+
+.navbar-toggle .icon-bar { background-color: #a30723; }
+
+.navbar-toggle { border: 1px solid #a30723; color: #a30723; font-family: Georgia, "Times New Roman", Times, serif; font-weight: bold; }
 
 .dmbs-footer .footer-rule { background-color: transparent; height: 1px; margin: 20px 0 30px; border-top: 1px solid #6d6e70; }
 
