--- a/sass/partials/pages/_exhibitions.scss
+++ b/sass/partials/pages/_exhibitions.scss
@@ -14,6 +14,10 @@
       flex-direction: column;
       justify-content: space-between;
       padding: 40px;
+      @include for-phone-only {
+        width: 100%;
+        margin-right: 0;
+      }
 
       .exhibition-title {
         color: #fff;
