--- a/sass/partials/pages/_news.scss
+++ b/sass/partials/pages/_news.scss
@@ -6,7 +6,8 @@
   .dmbs-main {
     h3 {
       text-transform: uppercase;
-      font-family: $helvetica-bold;
+      font-family: $sans;
+      font-weight: bold;
       color: $gray;
       margin-bottom: 10px;
     }
