--- a/sass/partials/pages/_participate.scss
+++ b/sass/partials/pages/_participate.scss
@@ -2,7 +2,7 @@
   h4 {
     font-size: 14px;
     line-height: 1.4;
-    font-family: $helvetica;
+    font-family: $sans;
     margin-bottom: 3px;
     margin-top: 10px;
     color: $maroon;
@@ -24,7 +24,7 @@
     margin-bottom: 10px;
 
     b {
-      font-family: $helvetica;
+      font-family: $sans;
       color: $maroon;
       font-weight: normal;
     }
@@ -56,10 +56,10 @@
     margin-left: 20px;
   }
   .gform_title {
-    font-family: $helvetica-light;
+    font-family: $sans;
     text-transform: uppercase;
     font-size: 18px;
-    font-weight: normal;
+    font-weight: 300;
   }
   blockquote {
     border-left: 0;
