--- a/css/main.css
+++ b/css/main.css
@@ -4,21 +4,7 @@
 
 @font-face { font-family: 'LTC Twentieth Century Medium'; src: url("../fonts/LTCTwentiethCenturyMedium.eot"); src: url("../fonts/LTCTwentiethCenturyMedium.eot?#iefix") format("embedded-opentype"), url("../fonts/LTCTwentiethCenturyMedium.woff2") format("woff2"), url("../fonts/LTCTwentiethCenturyMedium.woff") format("woff"), url("../fonts/LTCTwentiethCenturyMedium.svg#webfont") format("svg"); font-weight: normal; font-style: normal; }
 
-@font-face { font-family: 'Helvetica LT Std Black'; src: url("../fonts/HelveticaLTStd-Blk.eot"); src: url("../fonts/HelveticaLTStd-Blk.eot?#iefix") format("embedded-opentype"), url("../fonts/HelveticaLTStd-Blk.woff2") format("woff2"), url("../fonts/HelveticaLTStd-Blk.woff") format("woff"), url("../fonts/HelveticaLTStd-Blk.svg#webfont") format("svg"); font-weight: normal; font-style: normal; }
-
-@font-face { font-family: 'Helvetica LT Std Bold'; src: url("../fonts/HelveticaLTStd-Bold.eot"); src: url("../fonts/HelveticaLTStd-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/HelveticaLTStd-Bold.woff2") format("woff2"), url("../fonts/HelveticaLTStd-Bold.woff") format("woff"), url("../fonts/HelveticaLTStd-Bold.svg#webfont") format("svg"); font-weight: normal; font-style: normal; }
-
-@font-face { font-family: 'Helvetica LT Std Light Condensed'; src: url("../fonts/HelveticaLTStd-LightCond.eot"); src: url("../fonts/HelveticaLTStd-LightCond.eot?#iefix") format("embedded-opentype"), url("../fonts/HelveticaLTStd-LightCond.woff2") format("woff2"), url("../fonts/HelveticaLTStd-LightCond.woff") format("woff"), url("../fonts/HelveticaLTStd-LightCond.svg#webfont") format("svg"); font-weight: normal; font-style: normal; }
-
-@font-face { font-family: 'Helvetica LT Std Light'; src: url("../fonts/HelveticaLTStd-Light.eot"); src: url("../fonts/HelveticaLTStd-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/HelveticaLTStd-Light.woff2") format("woff2"), url("../fonts/HelveticaLTStd-Light.woff") format("woff"), url("../fonts/HelveticaLTStd-Light.svg#webfont") format("svg"); font-weight: normal; font-style: normal; }
-
-@font-face { font-family: 'Helvetica LT Std Roman'; src: url("../fonts/HelveticaLTStd-Roman.eot"); src: url("../fonts/HelveticaLTStd-Roman.eot?#iefix") format("embedded-opentype"), url("../fonts/HelveticaLTStd-Roman.woff2") format("woff2"), url("../fonts/HelveticaLTStd-Roman.woff") format("woff"), url("../fonts/HelveticaLTStd-Roman.svg#webfont") format("svg"); font-weight: normal; font-style: normal; }
-
-@font-face { font-family: 'Helvetica LT Std Light Oblique'; src: url("../fonts/HelveticaLTStd-LightObl.eot"); src: url("../fonts/HelveticaLTStd-LightObl.eot?#iefix") format("embedded-opentype"), url("../fonts/HelveticaLTStd-LightObl.woff2") format("woff2"), url("../fonts/HelveticaLTStd-LightObl.woff") format("woff"), url("../fonts/HelveticaLTStd-LightObl.svg#webfont") format("svg"); font-weight: normal; font-style: normal; }
-
-@font-face { font-family: 'Helvetica LT Std Oblique'; src: url("../fonts/HelveticaLTStd-Obl.eot"); src: url("../fonts/HelveticaLTStd-Obl.eot?#iefix") format("embedded-opentype"), url("../fonts/HelveticaLTStd-Obl.woff2") format("woff2"), url("../fonts/HelveticaLTStd-Obl.woff") format("woff"), url("../fonts/HelveticaLTStd-Obl.svg#webfont") format("svg"); font-weight: normal; font-style: normal; }
-
-body { font-family: "Helvetica LT Std Roman", Helvetica, Arial, sans-serif; line-height: 1.2; color: #6d6e70; }
+body { font-family: "Open Sans", Helvetica, Arial, sans-serif; line-height: 1.2; color: #6d6e70; }
 
 h1, h2, h3, h4, h5 { font-weight: normal; }
 
@@ -30,13 +16,13 @@ h2.page-header { font-family: "LTC Twentieth Century Medium", Helvetica, Arial, 
 
 .wpb_text_column.page-header h2 { font-family: "LTC Twentieth Century Medium", Helvetica, Arial, sans-serif; color: #a30723; font-size: 50px; line-height: 1.2; padding-bottom: 0px; margin: 0; border-bottom: 0; font-weight: normal; }
 
-h3 { font-family: "Helvetica LT Std Roman", Helvetica, Arial, sans-serif; font-size: 16px; margin-top: 0; font-weight: normal; }
+h3 { font-family: "Open Sans", Helvetica, Arial, sans-serif; font-size: 16px; margin-top: 0; font-weight: normal; }
 
-p { font-family: "Helvetica LT Std Roman", Helvetica, Arial, sans-serif; font-size: 14px; line-height: 1.25; }
+p { font-family: "Open Sans", Helvetica, Arial, sans-serif; font-size: 14px; line-height: 1.25; }
 
 .image-caption { margin-top: 10px; font-size: 10px; line-height: 1.2; margin-bottom: 0; margin-right: 20px; }
 
-.photo-credit { font-family: "Helvetica LT Std Light", Helvetica, Arial, sans-serif; font-size: 9px; margin-bottom: 10px; margin-top: 5px; text-align: right; text-transform: uppercase; }
+.photo-credit { font-family: "Open Sans", Helvetica, Arial, sans-serif; font-weight: 300; font-size: 9px; margin-bottom: 10px; margin-top: 5px; text-align: right; text-transform: uppercase; }
 
 a { color: #a30723; }
 
@@ -72,15 +58,15 @@ textarea { border-color: #bfbfbf !important; }
 
 .ngg-navigation a.next, .ngg-navigation a.page-numbers, .ngg-navigation a.prev, .ngg-navigation span.next, .ngg-navigation span.page-numbers, .ngg-navigation span.prev { border: 0 !important; margin-right: 0; padding: 0; text-decoration: none; color: #a30723 !important; }
 
-.trustees .col-left h3, .trustees .col-main h3, .trustees .col-right h3 { font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; font-size: 14px; text-transform: uppercase; font-weight: normal; }
+.trustees .col-left h3, .trustees .col-main h3, .trustees .col-right h3 { font-family: "Open Sans", Helvetica, Arial, sans-serif; font-size: 14px; text-transform: uppercase; font-weight: bold; }
 
 .trustees { margin-top: 20px; }
 
-.trustees .trustee-list p { font-family: "Helvetica LT Std Light", Helvetica, Arial, sans-serif; line-height: 1.33; margin-bottom: 6px; font-size: 12px; }
+.trustees .trustee-list p { font-family: "Open Sans", Helvetica, Arial, sans-serif; line-height: 1.33; margin-bottom: 6px; font-size: 12px; font-weight: 300; }
 
-.trustees .trustee-list p i { font-style: normal; font-family: "Helvetica LT Std Light Oblique", Helvetica, Arial, sans-serif; }
+.trustees .trustee-list p i { font-style: italic; font-family: "Open Sans", Helvetica, Arial, sans-serif; font-weight: 300; }
 
-.trustees .trustee-list h4 { font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; font-size: 12px; font-weight: normal; margin-bottom: 3px; margin-top: 20px; }
+.trustees .trustee-list h4 { font-family: "Open Sans", Helvetica, Arial, sans-serif; font-size: 12px; font-weight: 700; margin-bottom: 3px; margin-top: 20px; }
 
 .trustees .trustee-list h4:first-of-type { margin-top: 0; }
 
@@ -100,7 +86,7 @@ textarea { border-color: #bfbfbf !important; }
 
 .trustees .trustee-pdf-downloads ul li a { color: #fff; text-transform: uppercase; font-size: 9px; background-color: #6d6e70; padding: 6px 6px 4px; border-radius: 6px; }
 
-.page-participate h4 { font-size: 14px; line-height: 1.4; font-family: "Helvetica LT Std Roman", Helvetica, Arial, sans-serif; margin-bottom: 3px; margin-top: 10px; color: #a30723; font-weight: normal; }
+.page-participate h4 { font-size: 14px; line-height: 1.4; font-family: "Open Sans", Helvetica, Arial, sans-serif; margin-bottom: 3px; margin-top: 10px; color: #a30723; font-weight: normal; }
 
 .page-participate .middle-column h4 { margin-top: 0; }
 
@@ -110,7 +96,7 @@ textarea { border-color: #bfbfbf !important; }
 
 .page-participate li { margin-bottom: 10px; }
 
-.page-participate li b { font-family: "Helvetica LT Std Roman", Helvetica, Arial, sans-serif; color: #a30723; font-weight: normal; }
+.page-participate li b { font-family: "Open Sans", Helvetica, Arial, sans-serif; color: #a30723; font-weight: normal; }
 
 .page-participate .gravity-form form { padding: 20px; border: 1px solid #6d6e70; }
 
@@ -120,17 +106,17 @@ textarea { border-color: #bfbfbf !important; }
 
 .page-participate .address { margin-left: 20px; }
 
-.page-participate .gform_title { font-family: "Helvetica LT Std Light", Helvetica, Arial, sans-serif; text-transform: uppercase; font-size: 18px; font-weight: normal; }
+.page-participate .gform_title { font-family: "Open Sans", Helvetica, Arial, sans-serif; text-transform: uppercase; font-size: 18px; font-weight: 300; }
 
 .page-participate blockquote { border-left: 0; padding-top: 0; }
 
-.page-press .dmbs-main h3 { text-transform: uppercase; font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; color: #6d6e70; margin-bottom: 5px; }
+.page-press .dmbs-main h3 { text-transform: uppercase; font-family: "Open Sans", Helvetica, Arial, sans-serif; font-weight: bold; color: #6d6e70; margin-bottom: 5px; }
 
 .page-press .news-content { font-family: Georgia, "Times New Roman", Times, serif; font-size: 13px; }
 
-.page-press .news-source { font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; font-size: 12px; margin-bottom: 2px; }
+.page-press .news-source { font-family: "Open Sans", Helvetica, Arial, sans-serif; font-weight: bold; font-size: 12px; margin-bottom: 2px; }
 
-.page-press .news-date { font-family: "Helvetica LT Std Light", Helvetica, Arial, sans-serif; font-size: 12px; margin-bottom: 10px; }
+.page-press .news-date { font-family: "Open Sans", Helvetica, Arial, sans-serif; font-size: 12px; margin-bottom: 10px; font-weight: 300; }
 
 .page-press .news-link { margin-top: 10px; }
 
@@ -140,7 +126,7 @@ textarea { border-color: #bfbfbf !important; }
 
 @media (max-width: 599px) { .page-press .news-item-block { margin-bottom: 30px; } }
 
-.page-press .news-past-link { margin-top: 40px; font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; }
+.page-press .news-past-link { margin-top: 40px; font-family: "Open Sans", Helvetica, Arial, sans-serif; font-weight: bold; }
 
 .page-press .news-past-link a { color: #a30723; }
 
@@ -185,13 +171,13 @@ textarea { border-color: #bfbfbf !important; }
 
 @media (max-width: 599px) { .page-exhibitions .exhibition-tiles .tile { width: 100%; margin-right: 0; } }
 
-.page-exhibitions .exhibition-tiles .tile .exhibition-title { color: #fff; font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; font-size: 32px; line-height: 1; }
+.page-exhibitions .exhibition-tiles .tile .exhibition-title { color: #fff; font-family: "Open Sans", Helvetica, Arial, sans-serif; font-size: 32px; line-height: 1; font-weight: bold; }
 
 .page-exhibitions .exhibition-tiles .tile .exhibition-title a { color: #fff; }
 
 .page-exhibitions .exhibition-tiles .tile .exhibition-title a:hover { text-decoration: none; }
 
-.page-exhibitions .exhibition-tiles .tile .exhibition-subtitle { color: #fff; font-family: "Helvetica LT Std Roman", Helvetica, Arial, sans-serif; font-size: 24px; }
+.page-exhibitions .exhibition-tiles .tile .exhibition-subtitle { color: #fff; font-family: "Open Sans", Helvetica, Arial, sans-serif; font-size: 24px; }
 
 .page-exhibitions .row-bottom { margin-top: 20px; }
 
@@ -205,7 +191,7 @@ textarea { border-color: #bfbfbf !important; }
 
 .page-news .profile-date { font-size: 12px; }
 
-.page-news .dmbs-main h3 { text-transform: uppercase; font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; color: #6d6e70; margin-bottom: 10px; }
+.page-news .dmbs-main h3 { text-transform: uppercase; font-family: "Open Sans", Helvetica, Arial, sans-serif; font-weight: bold; color: #6d6e70; margin-bottom: 10px; }
 
 .page-news .profile-hed { font-family: Georgia, "Times New Roman", Times, serif; font-size: 20px; font-weight: bold; margin-top: 5px; }
 
@@ -231,11 +217,11 @@ textarea { border-color: #bfbfbf !important; }
 
 @media (max-width: 599px) { .page-home .waa-now h1 { font-size: 34px; } }
 
-.page-home .waa-now h2 { font-family: "Helvetica LT Std Light", Helvetica, Arial, sans-serif; font-size: 24px; margin-top: 0; }
+.page-home .waa-now h2 { font-family: "Open Sans", Helvetica, Arial, sans-serif; font-weight: 300; font-size: 24px; margin-top: 0; }
 
 @media (max-width: 599px) { .page-home .waa-now h2 { font-size: 20px; } }
 
-.page-home .waa-now h3 { font-family: "Helvetica LT Std Light", Helvetica, Arial, sans-serif; font-size: 27px; margin-top: 0; text-transform: uppercase; }
+.page-home .waa-now h3 { font-family: "Open Sans", Helvetica, Arial, sans-serif; font-size: 27px; font-weight: 300; margin-top: 0; text-transform: uppercase; }
 
 @media (max-width: 599px) { .page-home .waa-now h3 { font-size: 20px; } }
 
@@ -257,11 +243,11 @@ textarea { border-color: #bfbfbf !important; }
 
 .page-home .now-items > div .date { color: #6d6e70; font-family: Georgia, "Times New Roman", Times, serif; font-size: 24px; border-top: 1px solid #6d6e70; border-bottom: 1px solid #6d6e70; padding-bottom: 5px; padding-top: 2px; margin-top: 15px; }
 
-.page-home .now-items > div h3 { text-transform: none; font-family: "Helvetica LT Std Roman", Helvetica, Arial, sans-serif; font-size: 24px; margin-top: 15px; margin-bottom: 0; }
+.page-home .now-items > div h3 { text-transform: none; font-family: "Open Sans", Helvetica, Arial, sans-serif; font-size: 24px; margin-top: 15px; margin-bottom: 0; }
 
-.page-home .now-items > div h4 { font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; font-size: 14px; margin-top: 2px; }
+.page-home .now-items > div h4 { font-family: "Open Sans", Helvetica, Arial, sans-serif; font-weight: bold; font-size: 14px; margin-top: 2px; }
 
-.page-home .now-items > div a { font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; text-transform: uppercase; }
+.page-home .now-items > div a { font-family: "Open Sans", Helvetica, Arial, sans-serif; font-weight: bold; text-transform: uppercase; }
 
 .page-home .waa-study { display: -webkit-box; display: -ms-flexbox; display: flex; margin-top: 30px; margin-bottom: 20px; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
 
@@ -273,7 +259,7 @@ textarea { border-color: #bfbfbf !important; }
 
 .page-home .waa-study .waa-study-box .box-content { padding: 10px; }
 
-.page-home .waa-study .waa-study-box .box-content h3 { font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; color: #a30723; text-transform: uppercase; margin-bottom: 5px; }
+.page-home .waa-study .waa-study-box .box-content h3 { font-family: "Open Sans", Helvetica, Arial, sans-serif; color: #a30723; text-transform: uppercase; margin-bottom: 5px; font-weight: bold; }
 
 .page-home .waa-study .waa-study-box .box-content .box-content-row { display: -webkit-box; display: -ms-flexbox; display: flex; margin-top: 15px; }
 
@@ -291,7 +277,7 @@ textarea { border-color: #bfbfbf !important; }
 
 .page-home .waa-study .waa-study-box .box-content .box-content-row > div > p { font-family: Georgia, "Times New Roman", Times, serif; }
 
-.page-home .waa-study .study-item { border: 1px solid #000; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: stretch; -ms-flex-align: stretch; align-items: stretch; font-family: "Helvetica LT Std Roman", Helvetica, Arial, sans-serif; height: 185px; }
+.page-home .waa-study .study-item { border: 1px solid #000; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: stretch; -ms-flex-align: stretch; align-items: stretch; font-family: "Open Sans", Helvetica, Arial, sans-serif; height: 185px; }
 
 @media (max-width: 599px) { .page-home .waa-study .study-item { height: 220px; } }
 
@@ -309,13 +295,13 @@ textarea { border-color: #bfbfbf !important; }
 
 .page-home .waa-study .study-item .study-item-image { border: 1px solid #000; }
 
-.page-home .waa-study .study-item .content { font-family: "Helvetica LT Std Roman", Helvetica, Arial, sans-serif; width: 50%; }
+.page-home .waa-study .study-item .content { font-family: "Open Sans", Helvetica, Arial, sans-serif; width: 50%; }
 
 .page-home .waa-study .study-item a { text-transform: uppercase; }
 
 @media (max-width: 599px) { .navbar-nav { margin-left: 15px; } }
 
-.navbar-nav > li > a { color: #6d6e70; text-transform: uppercase; font-size: 12px; padding: 10px 11px; letter-spacing: .0255em; }
+.navbar-nav > li > a { color: #6d6e70; text-transform: uppercase; font-size: 12px; padding: 10px 13px; letter-spacing: .04em; }
 
 .navbar-nav > li > a:hover { background-color: transparent; }
 
