--- a/sass/partials/_fonts.scss
+++ b/sass/partials/_fonts.scss
@@ -6,58 +6,58 @@
   font-style: normal;
 }
 
-@font-face {
-  font-family: 'Helvetica LT Std Black';
-  src: url('../fonts/HelveticaLTStd-Blk.eot');
-  src: url('../fonts/HelveticaLTStd-Blk.eot?#iefix') format('embedded-opentype'), url('../fonts/HelveticaLTStd-Blk.woff2') format('woff2'), url('../fonts/HelveticaLTStd-Blk.woff') format('woff'), url('../fonts/HelveticaLTStd-Blk.svg#webfont') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
+// @font-face {
+//   font-family: 'Helvetica LT Std Black';
+//   src: url('../fonts/HelveticaLTStd-Blk.eot');
+//   src: url('../fonts/HelveticaLTStd-Blk.eot?#iefix') format('embedded-opentype'), url('../fonts/HelveticaLTStd-Blk.woff2') format('woff2'), url('../fonts/HelveticaLTStd-Blk.woff') format('woff'), url('../fonts/HelveticaLTStd-Blk.svg#webfont') format('svg');
+//   font-weight: normal;
+//   font-style: normal;
+// }
 
-@font-face {
-  font-family: 'Helvetica LT Std Bold';
-  src: url('../fonts/HelveticaLTStd-Bold.eot');
-  src: url('../fonts/HelveticaLTStd-Bold.eot?#iefix') format('embedded-opentype'), url('../fonts/HelveticaLTStd-Bold.woff2') format('woff2'), url('../fonts/HelveticaLTStd-Bold.woff') format('woff'), url('../fonts/HelveticaLTStd-Bold.svg#webfont') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
+// @font-face {
+//   font-family: 'Helvetica LT Std Bold';
+//   src: url('../fonts/HelveticaLTStd-Bold.eot');
+//   src: url('../fonts/HelveticaLTStd-Bold.eot?#iefix') format('embedded-opentype'), url('../fonts/HelveticaLTStd-Bold.woff2') format('woff2'), url('../fonts/HelveticaLTStd-Bold.woff') format('woff'), url('../fonts/HelveticaLTStd-Bold.svg#webfont') format('svg');
+//   font-weight: normal;
+//   font-style: normal;
+// }
 
-@font-face {
-  font-family: 'Helvetica LT Std Light Condensed';
-  src: url('../fonts/HelveticaLTStd-LightCond.eot');
-  src: url('../fonts/HelveticaLTStd-LightCond.eot?#iefix') format('embedded-opentype'), url('../fonts/HelveticaLTStd-LightCond.woff2') format('woff2'), url('../fonts/HelveticaLTStd-LightCond.woff') format('woff'), url('../fonts/HelveticaLTStd-LightCond.svg#webfont') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
+// @font-face {
+//   font-family: 'Helvetica LT Std Light Condensed';
+//   src: url('../fonts/HelveticaLTStd-LightCond.eot');
+//   src: url('../fonts/HelveticaLTStd-LightCond.eot?#iefix') format('embedded-opentype'), url('../fonts/HelveticaLTStd-LightCond.woff2') format('woff2'), url('../fonts/HelveticaLTStd-LightCond.woff') format('woff'), url('../fonts/HelveticaLTStd-LightCond.svg#webfont') format('svg');
+//   font-weight: normal;
+//   font-style: normal;
+// }
 
-@font-face {
-  font-family: 'Helvetica LT Std Light';
-  src: url('../fonts/HelveticaLTStd-Light.eot');
-  src: url('../fonts/HelveticaLTStd-Light.eot?#iefix') format('embedded-opentype'), url('../fonts/HelveticaLTStd-Light.woff2') format('woff2'), url('../fonts/HelveticaLTStd-Light.woff') format('woff'), url('../fonts/HelveticaLTStd-Light.svg#webfont') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
+// @font-face {
+//   font-family: 'Helvetica LT Std Light';
+//   src: url('../fonts/HelveticaLTStd-Light.eot');
+//   src: url('../fonts/HelveticaLTStd-Light.eot?#iefix') format('embedded-opentype'), url('../fonts/HelveticaLTStd-Light.woff2') format('woff2'), url('../fonts/HelveticaLTStd-Light.woff') format('woff'), url('../fonts/HelveticaLTStd-Light.svg#webfont') format('svg');
+//   font-weight: normal;
+//   font-style: normal;
+// }
 
-@font-face {
-  font-family: 'Helvetica LT Std Roman';
-  src: url('../fonts/HelveticaLTStd-Roman.eot');
-  src: url('../fonts/HelveticaLTStd-Roman.eot?#iefix') format('embedded-opentype'), url('../fonts/HelveticaLTStd-Roman.woff2') format('woff2'), url('../fonts/HelveticaLTStd-Roman.woff') format('woff'), url('../fonts/HelveticaLTStd-Roman.svg#webfont') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
+// @font-face {
+//   font-family: 'Helvetica LT Std Roman';
+//   src: url('../fonts/HelveticaLTStd-Roman.eot');
+//   src: url('../fonts/HelveticaLTStd-Roman.eot?#iefix') format('embedded-opentype'), url('../fonts/HelveticaLTStd-Roman.woff2') format('woff2'), url('../fonts/HelveticaLTStd-Roman.woff') format('woff'), url('../fonts/HelveticaLTStd-Roman.svg#webfont') format('svg');
+//   font-weight: normal;
+//   font-style: normal;
+// }
 
-@font-face {
-  font-family: 'Helvetica LT Std Light Oblique';
-  src: url('../fonts/HelveticaLTStd-LightObl.eot');
-  src: url('../fonts/HelveticaLTStd-LightObl.eot?#iefix') format('embedded-opentype'), url('../fonts/HelveticaLTStd-LightObl.woff2') format('woff2'), url('../fonts/HelveticaLTStd-LightObl.woff') format('woff'), url('../fonts/HelveticaLTStd-LightObl.svg#webfont') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
+// @font-face {
+//   font-family: 'Helvetica LT Std Light Oblique';
+//   src: url('../fonts/HelveticaLTStd-LightObl.eot');
+//   src: url('../fonts/HelveticaLTStd-LightObl.eot?#iefix') format('embedded-opentype'), url('../fonts/HelveticaLTStd-LightObl.woff2') format('woff2'), url('../fonts/HelveticaLTStd-LightObl.woff') format('woff'), url('../fonts/HelveticaLTStd-LightObl.svg#webfont') format('svg');
+//   font-weight: normal;
+//   font-style: normal;
+// }
 
-@font-face {
-  font-family: 'Helvetica LT Std Oblique';
-  src: url('../fonts/HelveticaLTStd-Obl.eot');
-  src: url('../fonts/HelveticaLTStd-Obl.eot?#iefix') format('embedded-opentype'), url('../fonts/HelveticaLTStd-Obl.woff2') format('woff2'), url('../fonts/HelveticaLTStd-Obl.woff') format('woff'), url('../fonts/HelveticaLTStd-Obl.svg#webfont') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
+// @font-face {
+//   font-family: 'Helvetica LT Std Oblique';
+//   src: url('../fonts/HelveticaLTStd-Obl.eot');
+//   src: url('../fonts/HelveticaLTStd-Obl.eot?#iefix') format('embedded-opentype'), url('../fonts/HelveticaLTStd-Obl.woff2') format('woff2'), url('../fonts/HelveticaLTStd-Obl.woff') format('woff'), url('../fonts/HelveticaLTStd-Obl.svg#webfont') format('svg');
+//   font-weight: normal;
+//   font-style: normal;
+// }
