--- a/sass/partials/_typography.scss
+++ b/sass/partials/_typography.scss
@@ -1,17 +1,11 @@
 // font variable defs
 $twentieth: 'LTC Twentieth Century Medium', Helvetica, Arial, sans-serif;
-$helvetica: 'Helvetica LT Std Roman', Helvetica, Arial, sans-serif;
-$helvetica-oblique: 'Helvetica LT Std Oblique', Helvetica, Arial, sans-serif;
-$helvetica-light: 'Helvetica LT Std Light', Helvetica, Arial, sans-serif;
-$helvetica-light-oblique: 'Helvetica LT Std Light Oblique', Helvetica, Arial, sans-serif;
-$helvetica-light-condensed: 'Helvetica LT Std Light Condensed', Helvetica, Arial, sans-serif;
-$helvetica-bold: 'Helvetica LT Std Bold', Helvetica, Arial, sans-serif;
-$helvetica-black: 'Helvetica LT Std Black', Helvetica, Arial, sans-serif;
+$sans: 'Open Sans', Helvetica, Arial, sans-serif;
 $georgia: Georgia, 'Times New Roman', Times, serif;
 $body-text-size: 14px;
 
 body {
-  font-family: $helvetica;
+  font-family: $sans;
   line-height: 1.2;
   color: #6d6e70;
 }
@@ -56,14 +50,14 @@ h2.page-header {
 }
 
 h3 {
-  font-family: $helvetica;
+  font-family: $sans;
   font-size: 16px;
   margin-top: 0;
   font-weight: normal;
 }
 
 p {
-  font-family: $helvetica;
+  font-family: $sans;
   font-size: $body-text-size;
   line-height: 1.25;
 }
@@ -77,7 +71,8 @@ p {
 }
 
 .photo-credit {
-  font-family: $helvetica-light;
+  font-family: $sans;
+  font-weight: 300;
   font-size: 9px;
   margin-bottom: 10px;
   margin-top: 5px;
