--- a/sass/partials/pages/_trustees.scss
+++ b/sass/partials/pages/_trustees.scss
@@ -1,8 +1,8 @@
 %trustees-column-heads {
-  font-family: $helvetica-bold;
+  font-family: $sans;
   font-size: 14px;
   text-transform: uppercase;
-  font-weight: normal;
+  font-weight: bold;
 }
 
 .trustees {
@@ -10,20 +10,22 @@
 
   .trustee-list {
     p {
-      font-family: $helvetica-light;
+      font-family: $sans;
       line-height: 1.33;
       margin-bottom: 6px;
       font-size: 12px;
+      font-weight: 300;
       i {
-        font-style: normal;
-        font-family: $helvetica-light-oblique;
+        font-style: italic;
+        font-family: $sans;
+        font-weight: 300;
       }
     }
 
     h4 {
-      font-family: $helvetica-bold;
+      font-family: $sans;
       font-size: 12px;
-      font-weight: normal;
+      font-weight: 700;
       margin-bottom: 3px;
       margin-top: 20px;
       &:first-of-type {
