added csscomb json

--- a/sass/partials/pages/_home.scss
+++ b/sass/partials/pages/_home.scss
@@ -180,7 +180,7 @@
             }
             &.col-right {
               @include for-phone-only {
-                margin-top: 20px
+                margin-top: 20px;
               }
             }
 
