--- a/sass/partials/_typography.scss
+++ b/sass/partials/_typography.scss
@@ -27,7 +27,7 @@ h2.page-header {
   color: $maroon;
   font-size: 50px;
   line-height: 1.2;
-  padding-bottom: 0px;
+  padding-bottom: 0;
   margin: -15px 0 10px;
   border-bottom: 0;
   font-weight: normal;
@@ -42,7 +42,7 @@ h2.page-header {
     color: $maroon;
     font-size: 50px;
     line-height: 1.2;
-    padding-bottom: 0px;
+    padding-bottom: 0;
     margin: 0;
     border-bottom: 0;
     font-weight: normal;
@@ -90,7 +90,7 @@ a {
 
 .gform_wrapper label.gfield_label {
   font-weight: normal !important;
-  margin-bottom: 0px !important;
+  margin-bottom: 0 !important;
   font-size: 12px !important;
   font-size: inherit;
 }
